@@ -3,7 +3,7 @@
  * Ruby Cairo Binding
  *
  * $Author: kou $
- * $Date: 2005-10-11 13:23:49 $
+ * $Date: 2006-10-22 11:30:51 $
  *
  * Copyright 2005 Kouhei Sutou <kou@cozmixng.org>
  *
@@ -60,10 +60,8 @@ cr_path_each (VALUE self)
   for (i = 0; i < path->num_data; i += path->data[i].header.length)
     {
       cairo_path_data_t *data = &(path->data[i]);
-      cairo_path_data_type_t type;
       VALUE points;
 
-      type = RVAL2CRPATHDATATYPE (data->header.type);
       points = rb_ary_new ();
 
       for (j = 1; j < data->header.length; j++)
@@ -72,7 +70,7 @@ cr_path_each (VALUE self)
                                             rb_float_new (data[j].point.x),
                                             rb_float_new (data[j].point.y)));
         }
-      rb_yield_values (2, type, points);
+      rb_yield_values (2, INT2FIX (data->header.type), points);
     }
 
   return self;
